@@ -3,5 +3,5 @@ resss <- function(prm, resfn, ...) {
     # resfn at parameters prm and extra variables defined in
     # the dot-arguments J C Nash 2012-4-26
     resids <- resfn(prm, ...)  # ?? try()
-    ss <- crossprod(resids)
+    ss <- as.numeric(crossprod(resids))
 }
